playing/stopping different songs with proper progressbar movement, vinyl spin, and playpause icon now working added settimeout clearinterval function when song ends still has overlapping setinterval issues when playing different songs but overall it works, ill take it. just dont play/pause too much songs (might affect performance or eat lot of ram (maybe))

--- a/style.css
+++ b/style.css
@@ -210,7 +210,6 @@ input{
   width: 300px;
   height: 300px;
   border-radius: 50%;
-  border: 5px solid orange;
   background: linear-gradient(
         30deg,
         transparent 40%,
